# ComfyUI_MIGraphX

./: LICENSE  README.md  __init__.py  migraphx_compile_sd3.py  migraphx_utils.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
workflows/: SD3.5M_example_MGX.json  SD3M_T5_example_MGX.json  SD3M_example_MGX.json  SD3M_example_PYTORCH.json  SD3_1024_MGX.json  SD3_512_MGX.json  SD3_512_PYTORCH.json  SD3_T5_512_MGX.json
